--- a/QX/long.conf
+++ b/QX/long.conf
@@ -1,3 +1,3 @@
 hostname = long.com, long.net, *.long.com, *.long.net,*.long.xyz
 
-^https?:\/\/(.+\.)?long\.(com|net) url script-analyze-echo-response https://cdn.jsdelivr.net/gh/bgvioletsky/long/QX/render.js
+^https?:\/\/(.+\.)?long\.(com|net) url script-analyze-echo-response https://cdn.jsdelivr.net/gh/bgvioletsky/long@0.0.3/QX/render.js
